Feature/model unification (#2)
* Model unification

* HIbernate development.

* Hibernate used to store and retrieve db data.

* Hibernate used to store and retrieve db data.

* Hibernate used to store and retrieve db data.

* Hibernate used to store and retrieve db data.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 app.title=Grammarly
 
 spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+
