--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,16 @@ spring.mail.password=<login password to smtp server>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-app.title=Grammarly
+app.title=Gramilka
 
 spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:~/workspace/tmp/db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
