--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 app.title=Gramilka
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tpalucki@gmail.com
@@ -8,11 +7,25 @@ spring.mail.password=<login password to smtp server>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:file:~/workspace/tmp/db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+##### H2 Config #####
+##spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:~/workspace/tmp/db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.show-sql=true
+
+##### Postgres Config #####
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+##### JPA / HIBERNATE Common Config #####
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+spring.datasource.initialization-mode=always
