--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 app.title=Gramilka
-
+##### Mail Config #####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tpalucki@gmail.com
 spring.mail.password=<login password to smtp server>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 ##### H2 Config #####
 ##spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.url=jdbc:h2:file:~/workspace/tmp/db
@@ -16,14 +19,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
-
 ##### Postgres Config #####
 spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
 ##### JPA / HIBERNATE Common Config #####
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
