--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 app.title=Gramilka
+app.client.url=http://localhost:4200
+app.client.subscription.confirm.path=/subscription/confirm
 ##### Mail Config #####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tpalucki@gmail.com
-spring.mail.password=<login password to smtp server>
+#spring.mail.password=<login password to smtp server>
+spring.mail.password=fsyyjpchdmlbdwhv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
