--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 app.title=Gramilka
 app.client.url=http://localhost:4200
 app.client.subscription.confirm.path=/subscription/confirm
+app.client.quiz.path=/quiz
 ##### Mail Config #####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tpalucki@gmail.com
-spring.mail.password=<login password to smtp server>
+#spring.mail.password=<login password to smtp server>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -31,4 +32,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.datasource.initialization-mode=always
