Changes: - Random question loading works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ app.title=Gramilka
 app.client.url=http://localhost:4200
 app.client.subscription.confirm.path=/subscription/confirm
 app.client.quiz.path=/quiz
+app.quiz.questions.number=4
 ##### Mail Config #####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
