--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,13 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
 ##### Postgres Config #####
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/gramilka-db
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.username=postgres
+spring.datasource.username=gramilka
+#spring.datasource.password=postgres
+spring.datasource.password=gramilka-81253
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##### JPA / HIBERNATE Common Config #####
 spring.jpa.show-sql=true
