--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,7 +7,7 @@ app.quiz.questions.number=4
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=tpalucki@gmail.com
-spring.mail.password=<login password to smtp server>
+spring.mail.password=vxityugfurrrlmbh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -15,10 +15,10 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 ##### Postgres Config #####
-spring.datasource.url=jdbc:postgresql://localhost:5433/gramilka-db
+spring.datasource.url=jdbc:postgresql://localhost:5433/grammati-db
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=gramilka
-spring.datasource.password=gramilka-81253
+spring.datasource.username=grammati
+spring.datasource.password=grammati
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 ##### JPA / HIBERNATE Common Config #####
 spring.jpa.show-sql=true
