--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '3'
 
 services:
-  grammati-frontend-app:
-    image: frontapp-content-nginx
+  gramilka-frontend-app:
+    image: io.github.tpalucki/gramilka-frontend:0.0.3
     container_name: gramilka-frontend
     ports:
       - 80:80
     networks:
       - gramilka-network
+    depends_on:
+      - gramilka-backend-app
+      - gramilka-database
 
-  grammati-backend-app:
-    image: grammati-backend-0.0.3
+  gramilka-backend-app:
+    image: io.github.tpalucki/gramilka-backend:0.0.3
     container_name: gramilka-backend
     ports:
       - 8080:80
@@ -22,10 +25,9 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://gramilka-database/gramilka-db
       - SPRING_DATASOURCE_USERNAME=gramilka
       - SPRING_DATASOURCE_PASSWORD=gramilka-81253
-  #      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
 
   gramilka-database:
-    image: postgres:13.1-alpine
+    image: postgres:11-alpine
     container_name: gramilka-database
     ports:
       - 5433:5432
@@ -35,6 +37,8 @@ services:
       - POSTGRES_DB=gramilka-db
     networks:
       - gramilka-network
+    volumes:
+      - /var/local/gramilka/database:/var/lib/postgresql/data
 
 networks:
   gramilka-network:
